@startuml
top to bottom direction
title Immigration Helper - Class Diagram

' Node.js Backend Classes (Entry Point)
package "Node.js Backend (Express)" {
  
  class NewsService {
    - API_KEY: string
    - BASE_URL: string
    --
    + getImmigrationNews(options: NewsServiceOptions): Promise<CategorizedArticle[]>
  }
  
  NewsService .down.> NewsServiceOptions : uses
  
  interface NewsServiceOptions {
    + page: Optional[string]
    + pageSize: number
    + country: Optional[Country]
    + category: Optional[NewsCategory]
  }
  
  NewsService -down-> Article : fetches
  
  class Article {
    + title: string
    + description: string
    + link: string
    + pubDate: string
    + source_name: string
    + image_url: Optional[string]
    + country: string[]
  }
  
  Article <|-down- CategorizedArticle : extends
  
  class CategorizedArticle {
    + title: string
    + description: string
    + link: string
    + pubDate: string
    + source_name: string
    + category: NewsCategory
    + relevanceScore: number
  }
  
  class NewsApiResponse {
    + status: string
    + totalResults: number
    + results: Article[]
    + nextPage: Optional[string]
  }
  
  NewsApiResponse *-down- Article : contains
}

' Python RAG Service Classes (Below Node Backend)
package "RAG Service (Python/FastAPI)" {
  
  class RAGService {
    - vector_store: VectorStoreManager
    - llm: OllamaLLM
    - prompt_template: PromptTemplate
    --
    + query(question: str): ChatQueryResponse
    - get_relevant_documents(query: str): List[Document]
    - generate_answer(query: str, context: str): str
    - initialize_llm(): OllamaLLM
  }
  
  RAGService -down-|> VectorStoreManager : uses
  
  class VectorStoreManager {
    - vector_store: VectorStore
    - embeddings: Embeddings
    - persist_directory: str
    --
    + similarity_search(query: str, k: int): List[Document]
    + add_documents(documents: List[Document]): void
    + get_document_count(): int
    + initialize_store(): void
  }
  
  VectorStoreManager -down-|> DocumentLoader : uses
  
  class DocumentLoader {
    + load_documents(): List[Document]
    + load_markdown(file_path: str): List[Document]
    + chunk_documents(docs: List[Document]): List[Document]
  }
  
  RAGService .down.> ChatQueryRequest : receives
  
  class ChatQueryRequest {
    + query: str
    + session_id: Optional[str]
  }
  
  RAGService .down.> ChatQueryResponse : returns
  
  class ChatQueryResponse {
    + answer: str
    + sources: List[SourceDocument]
    + session_id: Optional[str]
    + confidence: Optional[float]
  }
  
  ChatQueryResponse *-down- SourceDocument : contains
  
  class SourceDocument {
    + content: str
    + source: str
    + page: Optional[int]
    + score: Optional[float]
  }
}

note bottom of NewsService
  Fetches immigration news
  from NewsData.io API
end note

note bottom of RAGService
  Handles AI-powered Q&A using
  RAG with Mistral LLM via Ollama
end note

note bottom of VectorStoreManager
  Manages ChromaDB + FAISS
  for embeddings and search
end note

@enduml
